[BUG] Fixed icon size on mobile

--- a/source/src/components/layout.scss
+++ b/source/src/components/layout.scss
@@ -45,6 +45,12 @@ body {
   width: 60px;
   height: 60px;
   border-radius: 30px;
+
+  @media (max-width: 480px) {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+  }
 }
 
 .vertical-timeline-element-content-arrow {
